fix button padding and icon spacing + fixed: bg color on the Google reviews button  seems to be the wrong shade of blue.

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -40,7 +40,7 @@ p {
 
 .btn{
     height: auto;
-    padding: 14px 21px;
+    padding: 14px 16px;
     text-transform: uppercase;
     font-size: 1.125rem;
     border:0;
@@ -52,7 +52,7 @@ p {
 
 .btn i{
     font-size: 1.25rem;
-    margin-right: 13px;
+    margin-right: 5px;
 }
 
 .btn-i-last{
@@ -121,6 +121,15 @@ p {
     }
 }
 
+.btn-google{ 
+    background-color: #4387f6;
+    color: $white;
+    &:hover{
+        background-color: #166af4;
+        color: $white;
+    }
+}
+
 .hamburger {    
     display: block;
     position: relative;
@@ -160,10 +169,3 @@ p {
         outline: 0;
     }
 }
-
-
-
-
-
-
-
